--- a/Rory-Udoy Final-assignment.Rmd
+++ b/Rory-Udoy Final-assignment.Rmd
@@ -205,8 +205,11 @@ icu_patients_df1 <- subset(icu_patients_df1, select = -c(Status, Survival, Days,
 
 
 ```{r}
-profile_missing(icu_patients_df1) %>% arrange(desc(num_missing))
+missing_rates<- profile_missing(icu_patients_df1) %>% arrange(desc(num_missing))
+
+missing_rates[1:25,]
 ```
+
 
 ###Check Our discrete variables
 
@@ -214,6 +217,7 @@ profile_missing(icu_patients_df1) %>% arrange(desc(num_missing))
 ```{r}
 plot_bar(icu_patients_df1)
 ```
+
 
 ###Check continuous variables
 
@@ -227,6 +231,7 @@ plot_histogram(icu_patients_df1)
 
 
 ###Look at discrete variable correlations
+
 
 
 ```{r}
@@ -247,64 +252,78 @@ A few key relationships stick out between variables looking at this graph:
 
 
 From this graph we can make a preliminary assessement about which predictor variables will be suitable for logistic regression analysis. We can select for predictor variables which are not highly correlated with each other, but are correlated with our 'in_hospital_death' outcome variable.
+
 1. Albumin min -
 
-..*no strong correlations between other predictor variables, other than other ablumin variables eg. Albumin_max - which we will not include.
+*no strong correlations between other predictor variables, other than other ablumin variables eg. Albumin_max - which we will not include.
+
 2. Bilirubin max - Bilirubin_max 
 
-..* Clinical indicator of impaired renal function and Haemolysis
+* Clinical indicator of impaired renal function and Haemolysis
+
 3. Serum creatinine (mg/dL) - Creatinine_max
 
-..* High levels (above 250) are a clincial indicator of renal failure, which is a very serious complication somtimes requiring dialysis.
-..* strongly Correlated with BUN but also weakly correlated with in_hospital_death.
+* High levels (above 250) are a clincial indicator of renal failure, which is a very serious complication somtimes requiring dialysis.
+* strongly Correlated with BUN but also weakly correlated with in_hospital_death.
+
 4. Serum bicarbonate (mmol/L) - HCO3_diff 
 
-..* Indicative of blood acidosis, higher Co
+* Indicative of blood acidosis, higher Co
+
 5. SAPS-I score - SAPS1
 
-..* This scoring system was created using 14 biological/clincial indicators Specifically for ICU paitents facilitate multicentre studies and outcome comparisons.
-..* Positively correlated with in_hospital_death.
+* This scoring system was created using 14 biological/clincial indicators Specifically for ICU paitents facilitate multicentre studies and outcome comparisons.
+* Positively correlated with in_hospital_death.
+
 6. Blood urea nitrogen (mg/dL) - BUN min
+
 
 7. Glasgow Comas Score - GCS_max
 
-..* The Glasgow Coma Scale provides a score in the range 3-15; patients with scores of 3-8 are usually said to be in a coma.
-..* Strongly Negatively correlated with in_hospital_death
+* The Glasgow Coma Scale provides a score in the range 3-15; patients with scores of 3-8 are usually said to be in a coma.
+* Strongly Negatively correlated with in_hospital_death
+
 8. Arterial pH (0-14) - ph_min
 
-..* Can be an indicator of Respiratory acidosis
+* Can be an indicator of Respiratory acidosis
+
 9. Serum glucose (mg/dL) - Glucose_max
 
-..* Clinical indicator of diabetes
-..* Positive correlation with in_hospital_death.
+* Clinical indicator of diabetes
+* Positive correlation with in_hospital_death.
+
 10. Lactate (mmol/L) - Lactate
 
-..* Positive correlation with in_hospital_death.
+* Positive correlation with in_hospital_death.
+
 11. Temperature (°C) - temp_diff
 
-..* Large differences in temperature during a patient's stay in ICU are indicative of many underlying issues such as infection.
+* Large differences in temperature during a patient's stay in ICU are indicative of many underlying issues such as infection.
+
 12. O2 saturation in hemoglobin (%) - SaO2_max
 
-..* Haemoglobin oxygen saturation
-..* Negatively correlated with in_hospital_death.
+* Haemoglobin oxygen saturation
+* Negatively correlated with in_hospital_death.
+
 13. Height (cm) - Height
 
-..* Standard to include within medical modelling.
+* Standard to include within medical modelling.
+
 14. Weight (kg) - Weight
 
-..* Greatest difference in weight throughout the stay
-..* Standard to include within medical modelling.
+* Greatest difference in weight throughout the stay
+* Standard to include within medical modelling.
 
 
 ###Scatterplot 
 
 ```{r}
-arr_delay_df2 <- final_data[, c("arr_delay", "dep_time", "dep_delay", "arr_time", "air_time", "distance", "year_planes", "seats")]
+arr_delay_df2 <- icu_patients_df1[, c("in_hospital_death", "Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "SaO2_max", "Height", "Weight_diff")]
 
-plot_scatterplot(arr_delay_df2, by = "arr_delay", sampled_rows = 1000L)
+plot_scatterplot(arr_delay_df2, by = "in_hospital_death", sampled_rows = 1000L)
 ```
 
-_investigation of relationships between "in_hospital_death" and 
+_investigation of relationships between "in_hospital_death" and chosen predictor variables._
 
 
 3. Fit appropriate univariate logistic regression models.
